--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,45 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependências
+node_modules/
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
 
-# Dependencies
-node_modules
-.pnp
-.pnp.js
+# Diretórios de build/output
+/.turbo/
+/dist/
+/.next/
+/out/
+/build/
+/.tscache
 
-# Local env files
+# Arquivos de log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Arquivos de ambiente
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Testing
-coverage
-
-# Turbo
-.turbo
-
-# Vercel
-.vercel
-
-# Build Outputs
-.next/
-out/
-build
-dist
-
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
+# Sistema Operacional
 .DS_Store
-*.pem
+Thumbs.db
+
+# Editores de IDE/Texto
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+
+# Outros
+*.tar.gz
+*.zip
+*.tgz
+
+# Perfis de desempenho gerados pelo node
+profile*.json
